# AdventOfCode2022

day01/: day1.cabal
day01/src/: Main.hs
day02/: LICENSE  day02.cabal
day02/src/: Main.hs
day03/: day03.cabal
day03/src/: Main.hs
day04/: day04.cabal
day04/src/: Main.hs
day05/: day05.cabal
day05/src/: Main.hs
day06/: day06.cabal
day06/src/: Main.hs
day07/src/: main.py
day08/: day08.cabal
day08/src/: Main.hs
day09/: CHANGELOG.md  day09.cabal
day09/src/: Main.hs
day1/: day1.cabal
day1/app/: Main.hs
day10/: day10.cabal
day10/src/: Main.hs
day11/: day11.cabal
day11/src/: Main.hs
day12/: LICENSE  day12.cabal
day12/src/: Main.hs
day13/: day13.cabal
day13/src/: Main.hs
day14/: day14.cabal  map.txt
day14/src/: Main.hs
day15/: day15.cabal
day15/src/: Main.hs
day16/: day16.cabal
day16/src/: Main.hs
day17/: LICENSE  day17.cabal
day17/src/: Main.hs
