cabal-version:          2.4
name:                   day17
version:                0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:                MIT
license-file:           LICENSE
author:                 William Due
maintainer:             williamhenrichdue@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:     CHANGELOG.md

executable day17
    main-is:            Main.hs
    build-depends:      base ^>=4.17.0.0, containers
    hs-source-dirs:     src
    default-language:   Haskell2010
